test/unique/neg/share.check
share.scala:8: error: capability unavailable
    share(x)
         ^
one error found
